all methods created, http get implemented

--- a/tutorial9/tutorial9/appsettings.json
+++ b/tutorial9/tutorial9/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1460;Database=trips;User Id=SA;Password=Passw0rd;"
+    "DefaultConnection": "Server=localhost,1460;Database=trips;User Id=SA;Password=Passw0rd;TrustServerCertificate=True;Encrypt=False;"
   },
   "AllowedHosts": "*"
 }
